# partiql-rust-py

./: CHANGELOG.md  Cargo.toml  README.md
python/partiql_rust_py_test/: README.md  __init__.py
src/: lib.rs
